--- a/src/popup.html
+++ b/src/popup.html
@@ -3,10 +3,12 @@
         <script src="popup.js"></script>
     </head>
     <body>
-        <input type="radio" name="closingTabs" value="all">All tabs in all windows<br>
-        <input type="radio" name="closingTabs" value="allCurrentWindow">All tabs in current window<br>
-        <input type="radio" name="closingTabs" value="recent">All tabs opened after set timer<br>
-        <input type="text" name="time" placeholder="Time in minutes" required>
-        <button id="close"> Apply </button> 
+        <form>
+            <input type="radio" name="closingTabs" value="all">All tabs in all windows<br>
+            <input type="radio" name="closingTabs" value="allCurrentWindow">All tabs in current window<br>
+            <input type="radio" name="closingTabs" value="recent">All tabs opened after set timer<br>
+            <input type="number" name="time" placeholder="Time in minutes" min="0" required>
+            <input type="submit" id="apply" value="Apply">
+        </form>
     </body>
 </html>
