Added function to close this tab only

--- a/src/popup.html
+++ b/src/popup.html
@@ -7,7 +7,8 @@
             <input type="radio" name="closingTabs" value="all">All tabs in all windows<br>
             <input type="radio" name="closingTabs" value="allCurrentWindow">All tabs in current window<br>
             <input type="radio" name="closingTabs" value="recent">All tabs opened after set timer<br>
-            <input type="number" name="time" placeholder="Time in minutes" min="0" required>
+            <input type="radio" name="closingTabs" value="this">This tab only
+            <input type="number" name="time" placeholder="Time in minutes" min="0" value="0" required>
             <input type="submit" id="apply" value="Apply">
         </form>
     </body>
